--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,8 @@
       <a class="logo" href="#">Bless'sMusicShop🎹</a>
       <nav class="nav" aria-label="เมนูหลัก">
         <a href="#products">สินค้า</a>
+        <a href="my1stcategory.html">เครื่องสาย/คีย์บอร์ด</a>
+        <a href="my2ndcategory.html">เครื่องเป่า/เครื่องตี</a>
         <a href="#about">เกี่ยวกับเรา</a>
         <a href="#contact">ติดต่อ</a>
       </nav>
@@ -28,72 +30,98 @@
   <section class="hero">
     <div class="container hero-inner">
       <h1>เครื่องดนตรีคุณภาพ ราคาย่อมเยา</h1>
-      <p>กีตาร์ เปียโน กลอง ไวโอลิน และอุปกรณ์ครบครัน จัดส่งทั่วประเทศ</p>
+      <p>กีตาร์ เปียโน กลอง ไวโอลิน และอุปกรณ์ครบครัน จัดส่งทั่วประเทศ พร้อมบริการหลังการขาย
+        สินค้าทุกชิ้นมีประกันและรับเปลี่ยนคืนภายใน 7 วัน</p>
       <a class="btn" href="#products">ดูสินค้า</a>
     </div>
   </section>
+  
+   <section class="container" style="padding:18px 0;">
+    <h2 class="section-title">คลิปแนะนำร้าน</h2>
+    <div class="card" style="padding:0;">
+      <video controls style="width:100%; height:auto; display:block;">
+        <source src="resources/know-my-shop.mp4" type="video/mp4">
+      </video>
+      <div class="card-body">
+        <p class="muted">คลิปสั้นแนะนำหน้าร้านและแนะนำตัวเจ้าของร้าน</p>
+      </div>
+    </div>
+  </section>
 
-  <!-- สินค้า -->
+  
+  <!-- สินค้าแนะนำแบบหมวดหมู่ -->
   <main id="products" class="container">
     <h2 class="section-title">สินค้าแนะนำ</h2>
-    <div class="grid">
-      <!-- กีต้าร์ -->
-      <article class="card">
-        <img src="resources/guitar.jpg" alt="กีตาร์ สีไม้" />
-        <div class="card-body">
-          <h3>กีตาร์</h3>
-          <p class="muted">เสียงใส เล่นง่าย เหมาะสำหรับผู้เริ่มต้น</p>
-          <div class="price-row">
-            <span class="price">฿3,990</span>
-            <a href="#" class="btn btn-sm">หยิบใส่ตะกร้า</a>
+
+    <!-- หมวดเครื่องสาย/คีย์บอร์ด -->
+    <section style="margin-bottom:42px;">
+      <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:18px;">
+        <h3>เครื่องสาย / คีย์บอร์ด</h3>
+        <a href="my1stcategory.html" class="btn btn-sm">ดูเพิ่มเติม →</a>
+      </div>
+      <div class="grid">
+        <article class="card">
+          <img src="resources/guitar.jpg" alt="กีตาร์" />
+          <div class="card-body">
+            <h4>กีตาร์</h4>
+            <p class="muted">เสียงใส เล่นง่าย</p>
           </div>
-        </div>
-      </article>
-      <!-- เปียโน -->
-      <article class="card">
-        <img src="resources/piano.jpg" alt="เปียโนสีดำ" />
-        <div class="card-body">
-          <h3>เปียโนสีดำ</h3>
-          <p class="muted">คีย์น้ำหนักสมจริง มีเสียงหลากหลาย</p>
-          <div class="price-row">
-            <span class="price">฿12,500</span>
-            <a href="#" class="btn btn-sm">หยิบใส่ตะกร้า</a>
+        </article>
+        <article class="card">
+          <img src="resources/piano.jpg" alt="เปียโน" />
+          <div class="card-body">
+            <h4>เปียโน</h4>
+            <p class="muted">คีย์น้ำหนักสมจริง</p>
           </div>
-        </div>
-      </article>
-      <!-- กลองชุด -->
-      <article class="card">
-        <img src="resources/drums.jpg" alt="กลองชุด" />
-        <div class="card-body">
-          <h3>กลองชุด</h3>
-          <p class="muted">ทนทาน ซาวด์แน่น เหมาะทั้งซ้อมและแสดงสด</p>
-          <div class="price-row">
-            <span class="price">฿15,900</span>
-            <a href="#" class="btn btn-sm">หยิบใส่ตะกร้า</a>
+        </article>
+        <article class="card">
+          <img src="resources/violin.jpg" alt="ไวโอลิน" />
+          <div class="card-body">
+            <h4>ไวโอลิน</h4>
+            <p class="muted">ไม้คุณภาพ</p>
           </div>
-        </div>
-      </article>
-      <!-- ไวโอลิน -->
-      <article class="card">
-        <img src="resources/violin.jpg" alt="ไวโอลิน" />
-        <div class="card-body">
-          <h3>ไวโอลิน</h3>
-          <p class="muted">ไม้คุณภาพ พร้อมคันชักและกล่อง</p>
-          <div class="price-row">
-            <span class="price">฿4,790</span>
-            <a href="#" class="btn btn-sm">หยิบใส่ตะกร้า</a>
+        </article>
+      </div>
+    </section>
+
+    <!-- หมวดเครื่องเป่า/เครื่องตี -->
+    <section>
+      <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:18px;">
+        <h3>เครื่องเป่า / เครื่องตี</h3>
+        <a href="my2ndcategory.html" class="btn btn-sm">ดูเพิ่มเติม →</a>
+      </div>
+      <div class="grid">
+        <article class="card">
+          <img src="resources/drums.jpg" alt="กลองชุด" />
+          <div class="card-body">
+            <h4>กลองชุด</h4>
+            <p class="muted">ทนทาน ซาวด์แน่น</p>
           </div>
-        </div>
-      </article>
-    </div>
+        </article>
+        <article class="card">
+          <img src="resources/flute.jpg" alt="ฟลุ๊ต" />
+          <div class="card-body">
+            <h4>ฟลุ๊ต</h4>
+            <p class="muted">เสียงใส ชัดเจน</p>
+          </div>
+        </article>
+        <article class="card">
+          <img src="resources/clarinet.jpg" alt="คลาริเน็ต" />
+          <div class="card-body">
+            <h4>คลาริเน็ต</h4>
+            <p class="muted">เสียงนุ่ม กังวาลไพเราะ</p>
+          </div>
+        </article>
+      </div>
+    </section>
   </main>
 
   <!-- ข้อมูลร้าน -->
   <section id="about" class="container about">
     <h2 class="section-title">เกี่ยวกับเรา</h2>
     <p>
-      Bless's MusicShop คือร้านเครื่องดนตรีออนไลน์ที่คัดสรรสินค้าคุณภาพ พร้อมบริการหลังการขาย
-      สินค้าทุกชิ้นมีประกันและรับเปลี่ยนคืนภายใน 7 วัน
+      Bless’s MusicShop เริ่มต้นจากความรักในเสียงดนตรีของเจ้าของร้าน ที่อยากแบ่งปันเครื่องดนตรีคุณภาพให้ทุกคนเข้าถึงได้ง่าย
+       ไม่ว่าจะเป็นมือใหม่หรือมืออาชีพ จึงเกิดเป็นร้านค้าออนไลน์ที่คัดสรรสินค้าดี มีบริการจริงใจ และราคาย่อมเยา 🎶
     </p>
   </section>
 
@@ -118,7 +146,13 @@
       </form>
     </div>
   </section>
+  <footer class="container" style="padding:24px 0; color:var(--muted);">
+    <div style="display:flex; justify-content:space-between; align-items:center; gap:12px; flex-wrap:wrap;">
+      <div>© Bless's MusicShop</div>
+      <div class="muted">แหล่งรูปภาพ: iStock,philharmonia </div>
+    </div>
+  </footer>
 </body>
 
 </html>
-<!-- ที่มารูปภาพทั้งหมด https://www.istockphoto.com/th -->
+<!-- ที่มารูปภาพทั้งหมด https://www.istockphoto.com/th  https://philharmonia.co.uk/resources/instruments/ -->
